<resources>
    <string name="app_name">OpenLP Remote</string>
    <string name="service_menu_title">Service</string>
    <string name="menu_live_view">Live view</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add_alert">Add alert</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_search_activity">Search</string>
    <string name="settings">Settings</string>
    <string name="pref_host_title">Host name/IP address</string>
    <string name="pref_host_key">host_name</string>
    <string name="pref_port_title">Port</string>
    <string name="pref_port_key">port</string>
    <string name="pref_username_title">Username</string>
    <string name="pref_username_key">username</string>
    <string name="pref_password_title">Password</string>
    <string name="pref_password_key">password</string>
    <string name="pref_about_category_title">About</string>
    <string name="pref_about_category_key">about</string>
    <string name="pref_version_key">version</string>
    <string name="pref_version_title">Version</string>
    <string name="pref_connection_category_title">Connection</string>
    <string name="pref_connection_category_key">connection_settings</string>
    <string name="live">LIVE</string>
    <string name="service_title">Service</string>
    <string name="previous_slide">Previous</string>
    <string name="next_slide">Next</string>
    <string name="live_view">Live View</string>
    <string name="view_live">View</string>
    <string name="alert_hint">Text</string>
    <string name="display_alert">Display alert</string>
    <string name="display_alert_positive">Display</string>
    <string name="display_alert_negative">Cancel</string>
    <string name="error">Error:</string>
    <string name="alert_displayed">Alert displayed</string>
    <string name="select_plugin">Search from:</string>
    <string name="search_hint">Text</string>
    <string name="search">Search</string>
    <string name="plugin_not_selected_error">Please select plugin</string>
    <string name="select_search_text">Please enter search text</string>
    <string name="add_to_service">Add to service</string>
    <string name="add_to_live">Add to live</string>
    <string name="add_to_service_and_live">Add to service and live</string>
    <string name="added_to_live">Added to live screen</string>
    <string name="added_to_service">Added to service</string>
    <string name="refresh">Refresh</string>
    <string name="no_items_in_service_manager">No items in service manager</string>
    <string name="no_slides_on_display">No slides on display</string>
    <string name="no_results">No results</string>
</resources>
