<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/service"
          android:checkable="true"
          android:icon="@drawable/ic_list"
          android:title="@string/service_menu_title"
          app:showAsAction="always"/>

    <item android:id="@+id/live"
          android:checkable="true"
          android:icon="@drawable/ic_live_tv"
          android:title="@string/menu_live_view"
          app:showAsAction="always"/>

    <item android:id="@+id/alert"
          android:checkable="true"
          android:icon="@drawable/ic_add_alert"
          android:title="@string/menu_add_alert"
          app:showAsAction="always"/>

    <item android:id="@+id/settings"
          android:icon="@drawable/ic_settings"
          android:title="@string/menu_settings"
          app:showAsAction="always"/>

</menu>