<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_padding"
        tools:context=".ui.live.LiveViewFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:text="@string/live_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/textView4"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/slides" tools:listitem="@layout/live_view_item"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/refreshBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            app:icon="@drawable/ic_refresh_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4"/>
    <TextView
            style="@style/EmptyListMessageStyle"
            android:text="@string/no_slides_on_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/emptyMessage" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>