<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/select_plugin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintBottom_toBottomOf="@+id/pluginSpinner" android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@+id/pluginSpinner"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/pluginSpinner"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pluginSpinner" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint"
                android:maxLines="1"
                android:inputType="textAutoComplete"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchButton"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/searchButton" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/searchResults"/>
</androidx.constraintlayout.widget.ConstraintLayout>